# nayvvm.github.io

./: README.md  index.html
assistente_culinario/: CMakeLists.txt  README.md  assistente_final  install.sh  main.cpp  relatorio_final.html  run.sh
relatorios/: relatorio1.html
relatorios/relatorio_1/: relatorio1.html
relatorios/relatorio_1/video_read_from_webcam/: video_read_from_webcam.cpp
relatorios/relatorio_1/video_write_from_webcam/: video_write_from_webcam.cpp
relatorios/relatorio_2/: relatorio2.html
relatorios/relatorio_2/continuous_filter/: save_frame_filter.cpp
relatorios/relatorio_2/continuous_filter_webcam/: CMakeLists.txt
relatorios/relatorio_3/: 2a_filtro_gaussiano.py  2b_detector_canny.py  2c_salvar_midia.py  3_multiplos_objetos.py  relatorio3.html
relatorios/relatorio_4/: b.1_Imagem_Estática.cpp  b.2_Leitura_da_Webcam_ao_Vivo.cpp  b.3_Adicionando_Limiarização.cpp  b.4_Equalização_nas_Cores.cpp  meu_programa  meu_programa1.0  meu_programa1.1  meu_programa1.2  meu_programa1.3  meu_programa2  meu_programa3  meu_programa4  relatorio4.html
relatorios/relatorio_5/from_video/: CMakeLists.txt  bg_sub.cpp
relatorios/relatorio_5/from_webcam/: CMakeLists.txt  bg_sub_webcam.cpp
relatorios/relatorio_6/: lab6_exp1  lab6_exp2  relatorio6.html  shi-tomasi_e_orb.c  shi-tomasi_webcam.c
relatorios/relatorio_7/: relatorio7.html
